Script/microservices/discovery-service.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: discovery
spec: 
  selector: 
    matchLabels: 
      app: discovery
  replicas: 1
  template:
    metadata: 
        labels: 
            app: discovery
    spec: 
      containers: 
      - name: discovery
        image: discovery-service:1.0
        ports: 
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  type: NodePort
  selector:
    app: discovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
---
