Script/microservices/gateway-service.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: gateway
spec: 
  selector: 
    matchLabels: 
      app: gateway
  replicas: 1
  template:
    metadata: 
        labels: 
            app: gateway
    spec: 
      containers: 
      - name: gateway
        image: gateway-service:1.0
        ports: 
        - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
