Script/microservices/kafka.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: zoo1
spec: 
  selector: 
    matchLabels: 
      app: zoo1
  replicas: 1
  template:
    metadata: 
        labels: 
            app: zoo1
    spec: 
      containers: 
      - name: zoo1
        image: zookeeper
        ports: 
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
spec:
  selector:
    app: zoo1
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: kafka1
spec: 
  selector: 
    matchLabels: 
      app: kafka1
  replicas: 1
  template:
    metadata: 
      labels: 
        app: kafka1
    spec: 
      containers: 
      - name: kafka1
        image: wurstmeister/kafka:2.11-2.0.0
        ports: 
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka1-service
spec:
  type: ClusterIP
  ports:
  - port: 9092
  selector:
    app: kafka1
