Script/microservices/kafka_kube.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: zoo1
spec: 
  selector: 
    matchLabels: 
      app: zoo1
  replicas: 1
  template:
    metadata: 
        labels: 
            app: zoo1
    spec: 
      containers: 
      - name: zoo1
        image: zookeeper
        ports: 
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zoo1
spec:
  selector:
    app: zoo1
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-service
  name: kafka-service
spec:
  type: NodePort
  ports:
  - name: kafka-port
    port: 9092
    nodePort: 30092
    targetPort: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
  name: kafka
spec:
  selector: 
    matchLabels: 
      app: kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - env:
        - name: KAFKA_BROKER_ID
          value: "1"
        - name: MY_MINIKUBE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP          
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: "zoo1:2181"
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: KAFKA_ADVERTISED_LISTENERS        
          value: "PLAINTEXT://$(MY_POD_IP):9092"
        - name: KAFKA_LISTENERS
          value: "PLAINTEXT://$(MY_POD_IP):9092"
        - name: KAFKA_CREATE_TOPICS
          value: "auctions:1:1"
        image: wurstmeister/kafka
        imagePullPolicy: Always
        name: kafka
        ports:
        - containerPort: 9092
