Script/microservices/sagaorchestration.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: sagaorchestration
spec: 
  selector: 
    matchLabels: 
      app: sagaorchestration
  replicas: 1
  template:
    metadata: 
        labels: 
            app: sagaorchestration
    spec: 
      containers: 
      - name: sagaorchestration
        image: sagaorchestration:2.0
        ports: 
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: sagaorchestration-service
spec:
  type: NodePort
  selector:
    app: sagaorchestration-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
